k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    description: Golang Montreal website
  name: gomtl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gomtl
    spec:
      containers:
      - name: gomtl
        image: 772853327345.dkr.ecr.us-east-1.amazonaws.com/gomtl/golangmontreal.org:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
      restartPolicy: Always
