k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gomtl
spec:
  selector:
    app: gomtl
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
