k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gomtl
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-gomtl
    hosts:
      - www.golangmontreal.org
      - golangmontreal.org
  rules:
  - host: www.golangmontreal.org
    http:
      paths:
      - path: /
        backend:
          serviceName: gomtl
          servicePort: 80
  - host: golangmontreal.org
    http:
      paths:
      - path: /
        backend:
          serviceName: gomtl
          servicePort: 80
